--- a/index.html
+++ b/index.html
@@ -171,17 +171,17 @@
       <div id="display"></div>
 
       <div class="keypad">
-        <button class="key" onclick="addNumber(7)">7</button>
-        <button class="key" onclick="addNumber(8)">8</button>
-        <button class="key" onclick="addNumber(9)">9</button>
-        <button class="key" onclick="addNumber(4)">4</button>
-        <button class="key" onclick="addNumber(5)">5</button>
-        <button class="key" onclick="addNumber(6)">6</button>
-        <button class="key" onclick="addNumber(1)">1</button>
-        <button class="key" onclick="addNumber(2)">2</button>
-        <button class="key" onclick="addNumber(3)">3</button>
+        <button class="key" onclick="addNumber(7)">柒</button>
+        <button class="key" onclick="addNumber(8)">捌</button>
+        <button class="key" onclick="addNumber(9)">玖</button>
+        <button class="key" onclick="addNumber(4)">肆</button>
+        <button class="key" onclick="addNumber(5)">伍</button>
+        <button class="key" onclick="addNumber(6)">陸</button>
+        <button class="key" onclick="addNumber(1)">壹</button>
+        <button class="key" onclick="addNumber(2)">貳</button>
+        <button class="key" onclick="addNumber(3)">參</button>
         <button class="key" onclick="addNumber(0)" style="grid-column: span 3">
-          0
+          零
         </button>
       </div>
 
@@ -282,3 +282,4 @@
     </script>
   </body>
 </html>
+
